--- a/99.other/items/H5页面相关.md
+++ b/99.other/items/H5页面相关.md
@@ -1,4 +1,4 @@
-- [又拍CDN地址](https://www.upyun.com/index.html)
+* [又拍CDN地址](https://www.upyun.com/index.html)
 
   user:lijianhong
 
@@ -6,66 +6,46 @@
 
   域名:fincar
 
-
-
-
-
 强制刷新: ctrl+shift+r
 
-*为了看到效果，我之前的时候有如下的办法：*
+_为了看到效果，我之前的时候有如下的办法：_
 
-*方法1：清理浏览器缓冲。（ctrl+shift+del）调出chrome的清理缓冲的弹框，整体清理一遍后F5刷新页面。ok，看到我需要的效果了。*
+_方法1：清理浏览器缓冲。（ctrl+shift+del）调出chrome的清理缓冲的弹框，整体清理一遍后F5刷新页面。ok，看到我需要的效果了。_
 
-*方法2：直接将地址栏地址复制下来，换个浏览器进行预览。*
+_方法2：直接将地址栏地址复制下来，换个浏览器进行预览。_
 
-*方法3：ctrl+shift+n 弹一个新的隐身窗口，然后将代码地址粘进去，回车预览。*
+_方法3：ctrl+shift+n 弹一个新的隐身窗口，然后将代码地址粘进去，回车预览。_
 
-
-
-----
-
-
+---
 
 #### 参考网站
 
-- [java系统高并发解决方案之图片服务器分离](http://blog.csdn.net/qq_14979657/article/details/53195503)
+* [java系统高并发解决方案之图片服务器分离](http://blog.csdn.net/qq_14979657/article/details/53195503)
 
-1、同一域名下浏览器的并发连接数有限制，一般在2 - 6之间，下图列举了各个浏览器的并发连接数（下图供参考）
+1、同一域名下浏览器的并发连接数有限制，一般在2 - 6之间，下图列举了各个浏览器的并发连接数（下图供参考）
 
 2、由于cookie的原因，对缓存不利
 
-- [SpringMVC 的使用映射路径展示文件服务器上的图片](http://blog.csdn.net/yansong_8686/article/details/47356499)  可以看下没有采用
-- [springmvc 扩张实现类似于淘宝CDN 资源文件处理](http://www.myexception.cn/vc-mfc/1707828.html)
-- [推荐使用CDN公共库加速你的JS和CSS](http://caibaojian.com/cdn-js.html)
-- [Spring Boot 静态资源处理](http://blog.csdn.net/catoop/article/details/50501706)
-- [SpringMVC访问静态资源的三种方式](http://blog.csdn.net/u012730299/article/details/51872704)
-- [SpringMVC的几种返回方式](http://blog.csdn.net/sunhuwh/article/details/41727257) 参考
+* [SpringMVC 的使用映射路径展示文件服务器上的图片](http://blog.csdn.net/yansong_8686/article/details/47356499)  可以看下没有采用
+* [springmvc 扩张实现类似于淘宝CDN 资源文件处理](http://www.myexception.cn/vc-mfc/1707828.html)
+* [推荐使用CDN公共库加速你的JS和CSS](http://caibaojian.com/cdn-js.html)
+* [Spring Boot 静态资源处理](http://blog.csdn.net/catoop/article/details/50501706)
+* [SpringMVC访问静态资源的三种方式](http://blog.csdn.net/u012730299/article/details/51872704)
+* [SpringMVC的几种返回方式](http://blog.csdn.net/sunhuwh/article/details/41727257) 参考
 
+---
 
+#### Thymeleaf
 
-----
-
-####  Thymeleaf
-
-- [DIV CSS display (block none inline)属性的用法教程](http://www.divcss5.com/rumen/r291.shtml)
-- [Thymeleaf 常用属性](http://www.cnblogs.com/hjwublog/p/5051732.html)
-- [thymeleaf 基本语法](http://www.cnblogs.com/nuoyiamy/p/5591559.html)]
--  [using thymeleaf之八th:with定义局部变量](http://blog.csdn.net/sun_jy2011/article/details/40299415)
-- [thymeleaf 学习笔记-基础篇](http://www.bubuko.com/infodetail-1346127.html)
-- [HTML5模板引擎 Thymeleaf 教程](http://www.open-open.com/lib/view/open1383622135586.html)
-- [新一代Java模板引擎Thymeleaf](https://www.tianmaying.com/tutorial/using-thymeleaf)
-- [spring-boot--使用thymeleaf模板](http://blog.csdn.net/u014695188/article/details/52347318)
-- [使用Spring Boot开发WEB页面](http://www.jianshu.com/p/23bea93e34c7)
-
-
-
-
-
-
-
-
-
-
+* [DIV CSS display \(block none inline\)属性的用法教程](http://www.divcss5.com/rumen/r291.shtml)
+* [Thymeleaf 常用属性](http://www.cnblogs.com/hjwublog/p/5051732.html)
+* [thymeleaf 基本语法](http://www.cnblogs.com/nuoyiamy/p/5591559.html)\]
+* [using thymeleaf之八th:with定义局部变量](http://blog.csdn.net/sun_jy2011/article/details/40299415)
+* [thymeleaf 学习笔记-基础篇](http://www.bubuko.com/infodetail-1346127.html)
+* [HTML5模板引擎 Thymeleaf 教程](http://www.open-open.com/lib/view/open1383622135586.html)
+* [新一代Java模板引擎Thymeleaf](https://www.tianmaying.com/tutorial/using-thymeleaf)
+* [spring-boot--使用thymeleaf模板](http://blog.csdn.net/u014695188/article/details/52347318)
+* [使用Spring Boot开发WEB页面](http://www.jianshu.com/p/23bea93e34c7)
 
 ```
 --表达式
@@ -96,4 +76,6 @@
            所有这些标签能够结合和嵌套：
               User is of type ‘ + (${user.isAdmin()} ? ‘Administrator‘ : (${user.type} ?: ‘Unknown‘))
 ```
+
+
 
